[gd_scene load_steps=2 format=3 uid="uid://djks7elweceg3"]

[ext_resource type="Script" path="res://assets/scripts/MainMenu.gd" id="1_rsdxx"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_rsdxx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.2, 0.3, 0.4, 1)

[node name="TitleLabel" type="Label" parent="."]
offset_left = 398.0
offset_top = 128.0
offset_right = 1198.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 64
text = "Noita Golf"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
offset_left = 650.0
offset_top = 300.0
offset_right = 950.0
offset_bottom = 700.0
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="EditorButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level Editor"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
disabled = true
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"
